api/cs/Indigo.cs


      [DllImport("indigo.dll")]
      public static extern int indigoLoadMoleculeFromString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadMoleculeFromFile (string path);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadMoleculeFromBuffer (byte[] buf, int bufsize);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadQueryMoleculeFromString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadQueryMoleculeFromFile (string path);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadQueryMoleculeFromBuffer (byte[] buf, int bufsize);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadSmartsFromString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadSmartsFromFile (string filename);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadSmartsFromBuffer (byte[] buffer, int size);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveMolfile (int molecule, int output);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveMolfileToFile (int molecule, string filename);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoMolfile (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveCml(int molecule, int output);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveCmlToFile (int molecule, string filename);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoCml (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveMDLCT (int item, int output);

      [DllImport("indigo.dll")]
      public static extern int indigoLoadReactionFromString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadReactionFromFile (string path);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadReactionFromBuffer (byte[] buf, int bufsize);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadQueryReactionFromString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadQueryReactionFromFile (string path);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadQueryReactionFromBuffer (byte[] buf, int bufsize);
      [DllImport("indigo.dll")]
      public static extern int indigoCreateReaction ();
      [DllImport("indigo.dll")]
      public static extern int indigoCreateQueryReaction ();
      [DllImport("indigo.dll")]
      public static extern int indigoAddReactant (int reaction, int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoAddProduct (int reaction, int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCountReactants (int handler);
      [DllImport("indigo.dll")]
      public static extern int indigoCountProducts (int handler);
      [DllImport("indigo.dll")]
      public static extern int indigoCountMolecules (int handler);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateReactants (int reaction);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateProducts (int reaction);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateMolecules (int reader);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveRxnfile (int reaction, int output);
      [DllImport("indigo.dll")]
      public static extern int indigoSaveRxnfileToFile (int reaction, string filename);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoRxnfile (int reaction);
      [DllImport("indigo.dll")]
      public static extern int indigoAutomap (int reaction, string filename);

      [DllImport("indigo.dll")]
      public static extern int indigoIterateAtoms (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoIteratePseudoatoms (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateRSites (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateRGroups (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateRGroupFragments (int rgroup);
      [DllImport("indigo.dll")]
      public static extern int indigoCountAttachmentPoints (int rgroup);
      [DllImport("indigo.dll")]
      public static extern int indigoIsPseudoatom (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoIsRSite (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoSingleAllowedRGroup (int rsite);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoPseudoatomLabel (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoDegree (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoGetCharge (int atom, int* charge);
      [DllImport("indigo.dll")]
      public static extern int indigoGetExplicitValence (int atom, int* valence);
      [DllImport("indigo.dll")]
      public static extern int indigoGetRadicalElectrons (int atom, int* electrons);
      [DllImport("indigo.dll")]
      public static extern int indigoAtomNumber (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoAtomIsotope (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoCountAtoms (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCountBonds (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCountPseudoatoms (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCountRSites (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateBonds (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoBondOrder (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoBondStereo (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateNeighbors (int atom);
      [DllImport("indigo.dll")]
      public static extern int indigoBond (int nei);
      [DllImport("indigo.dll")]
      public static extern int indigoGetAtom (int molecule, int idx);
      [DllImport("indigo.dll")]
      public static extern int indigoGetBond (int molecule, int idx);
      [DllImport("indigo.dll")]
      public static extern int indigoCisTransClear (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoStereocentersClear (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCountStereocenters (int molecule);

      [DllImport("indigo.dll")]
      public static extern int   indigoGrossFormula    (int molecule);
      [DllImport("indigo.dll")]
      public static extern float indigoMolecularWeight (int molecule);
      [DllImport("indigo.dll")]
      public static extern float indigoMostAbundantMass (int molecule);
      [DllImport("indigo.dll")]
      public static extern float indigoMonoisotopicMass (int molecule);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoCanonicalSmiles (int molecule);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoLayeredCode (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCountComponents (int molecule);
      [DllImport("indigo.dll")]
      public static extern int indigoCreateSubmolecule (int molecule, int nvertices, int[] vertices);
      [DllImport("indigo.dll")]
      public static extern int indigoCreateEdgeSubmolecule (int molecule, int nvertices, int[] vertices,
                                         int nedges, int[] edges);

      [DllImport("indigo.dll")]
      public static extern int indigoAromatize (int item);
      [DllImport("indigo.dll")]
      public static extern int indigoDearomatize (int item);
      [DllImport("indigo.dll")]
      public static extern int indigoLayout (int item);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoSmiles (int item);
      [DllImport("indigo.dll")]
      public static extern int indigoExactMatch (int item1, int item2);
      [DllImport("indigo.dll")]
      public static extern sbyte* indigoName (int item);
      [DllImport("indigo.dll")]
      public static extern int indigoSetName (int item, string name);
      [DllImport("indigo.dll")]
      public static extern int indigoHasProperty (int handle, string field);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoGetProperty (int handle, string field);
      [DllImport("indigo.dll")]
      public static extern int indigoSetProperty (int handle, string field, string value);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateProperties (int handle);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoCheckBadValence (int handle);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoCheckAmbiguousH (int handle);

      [DllImport("indigo.dll")]
      public static extern int indigoFingerprint (int item, string type);
      [DllImport("indigo.dll")]
      public static extern int indigoCountBits (int fingerprint);
      [DllImport("indigo.dll")]
      public static extern int indigoCommonBits (int fingerprint1, int fingerprint2);
      [DllImport("indigo.dll")]
      public static extern float indigoSimilarity (int molecule1, int molecule2, string metrics);

      [DllImport("indigo.dll")]
      public static extern int indigoIterateSDF    (int reader);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateRDF    (int reader);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateSmiles (int reader);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateSDFile (string filename);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateRDFile (string filename);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateSmilesFile (string filename);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoRawData (int item);
      [DllImport("indigo.dll")]
      public static extern int indigoTell (int item);
      [DllImport("indigo.dll")]
      public static extern int indigoSdfAppend (int output, int item);
      [DllImport("indigo.dll")]
      public static extern int indigoSmilesAppend (int output, int item);

      [DllImport("indigo.dll")]
      public static extern int indigoCreateArray ();
      [DllImport("indigo.dll")]
      public static extern int indigoArrayAdd (int arr, int item);
      [DllImport("indigo.dll")]
      public static extern int indigoArrayAt (int arr, int index);
      [DllImport("indigo.dll")]
      public static extern int indigoArrayCount (int arr);
      [DllImport("indigo.dll")]
      public static extern int indigoArrayClear (int arr);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateArray (int arr);

      [DllImport("indigo.dll")]
      public static extern int indigoMatchSubstructure (int query, int target);
      [DllImport("indigo.dll")]
      public static extern int indigoMatchHighlight (int match);
      [DllImport("indigo.dll")]
      public static extern int indigoCountSubstructureMatches (int query, int target);
